overflow issue fixed

--- a/assets/css/components/front/_links.scss
+++ b/assets/css/components/front/_links.scss
@@ -8,7 +8,10 @@
   text-decoration: none;
 
   @include transition(color 0.2s);
-  @include z-index(link);
+  
+  @include breakpoint(md) {
+    @include z-index(link);
+  }
 
   &:hover {
     color: $color-grey-1;
